--- a/app/templates/transactions.html
+++ b/app/templates/transactions.html
@@ -13,7 +13,7 @@
     <meta name="author" content="">
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="/static/assets/images/favicon.png">
-    <title>Monster Admin Template - The Most Complete & Trusted Bootstrap 4 Admin Template</title>
+    <title>{{ label }} - powered by Sirius blockchain</title>
     <!-- Bootstrap Core CSS -->
     <link href="/static/assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -41,6 +41,30 @@
     <!-- Main wrapper - style you can find in pages.scss -->
     <!-- ============================================================== -->
     <div id="main-wrapper">
+        <!--  Modal  -->
+        <div id="modal-test" class="modal" tabindex="-1" role="dialog" style="background-color: rgba(0,0,0,0.2);">
+          <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title">details</h5>
+                <button  type="button" class="close" data-dismiss="modal" aria-label="Close" id="btn-modal-close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+
+                  <div style="width: 100%; height: 100%;">
+
+                  </div>
+                  cc
+
+              </div>
+              <div class="modal-footer">
+                <button id="btn-cancel-modal" type="button" class="btn btn-secondary" >Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
         <!-- ============================================================== -->
         <!-- Topbar header - style you can find in pages.scss -->
         <!-- ============================================================== -->
@@ -50,7 +74,7 @@
                 <!-- Logo -->
                 <!-- ============================================================== -->
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="index.html">
+                    <a @click.prevent="" class="navbar-brand" href="">
                         <!-- Logo icon -->
                         <b>
                             <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
@@ -108,24 +132,10 @@
                 <!-- Sidebar navigation-->
                 <nav class="sidebar-nav">
                     <ul id="sidebarnav">
-                        <li>
-                            <a href="index.html" class="waves-effect"><i class="fa fa-columns m-r-10" aria-hidden="true"></i>Транзакции</a>
+                        <li v-for="(menu, index) in left_menu" v-bind:class="{ active: active_menu == index }">
+                           <a @click.prevent="active_menu = index" href="#" class="waves-effect"><i v-bind:class="menu.class" aria-hidden="true"></i>[[menu.caption]]</a>
                         </li>
-                        <li>
-                            <a href="index.html" class="waves-effect"><i class="fa fa-table m-r-10" aria-hidden="true"></i>ГУ-11</a>
-                        </li>
-                        <li>
-                            <a href="pages-profile.html" class="waves-effect"><i class="fa fa-table m-r-10" aria-hidden="true"></i>ГУ-12</a>
-                        </li>
-                        <li>
-                            <a href="table-basic.html" class="waves-effect"><i class="fa fa-globe m-r-10" aria-hidden="true"></i>Грузоперевозки</a>
-                        </li>
-                        <li>
-                            <a href="icon-fontawesome.html" class="waves-effect"><i class="fa fa-globe m-r-10" aria-hidden="true"></i>Морские документы</a>
-                        </li>
-                        <li>
-                            <a href="icon-fontawesome.html" class="waves-effect"><i class="fa fa-info-circle m-r-10" aria-hidden="true"></i>Отладка</a>
-                        </li>
+
                     </ul>
 
                 </nav>
@@ -146,7 +156,7 @@
             <div class="container-fluid">
                 <div class="row page-titles">
                     <img src="{{ logo }}" style="max-height: 50px;margin-right: 30px;"/>
-                    <h1>{{ label }}</h1>
+                    <h1 class="text-secondary">{{ label }}</h1>
                 </div>
                 <!-- ============================================================== -->
                 <!-- Bread crumb and right sidebar toggle -->
@@ -155,7 +165,7 @@
                     <div class="col-md-6 col-8 align-self-center">
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
-                            <li class="breadcrumb-item active">Dashboard</li>
+                            <li class="breadcrumb-item active">[[breadcrumb]]</li>
                         </ol>
                     </div>
 
@@ -263,7 +273,15 @@
                 scanning: false,
                 ledgers: ledgers_data,
                 search_ledger: null,
-                selected_ledger: null
+                selected_ledger: null,
+                left_menu: [
+                    {'caption': 'Транзакции', 'class': 'fa fa-columns m-r-10'},
+                    {'caption': 'ГУ-11', 'class': 'fa fa-table m-r-10'},
+                    {'caption': 'ГУ-12', 'class': 'fa fa-table m-r-10'},
+                    {'caption': 'Грузоперевозки', 'class': 'fa fa-globe m-r-10'},
+                    {'caption': 'Морские документы', 'class': 'fa fa-globe m-r-10'}
+                ],
+                active_menu: 0
             },
             computed: {
                 filtered_ledgers: function(){
@@ -279,6 +297,9 @@
                     else {
                         return ledgers_data;
                     }
+                },
+                breadcrumb: function(){
+                    return this.left_menu[this.active_menu].caption
                 }
             },
             watch: {
