map page completed

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,6 +25,7 @@
     // Create map instance
     var chart = am4core.create("map", am4maps.MapChart);
 
+
     var interfaceColors = new am4core.InterfaceColorSet();
 
     // Set map definition
@@ -47,37 +48,42 @@
             "latitude": 49.49,
             "longitude": 73.9,
             "destinations": ["aktau"],
+            'did': "U9A6U7LZQe4dCh84t3fpTK"
         },{
             "id": "aktau",
             "title": "PORT AKTAU",
             "latitude": 43.693695,
             "longitude": 51.260834,
-            "destinations": ["baku", 'karagandy']
+            "destinations": ["baku", 'karagandy'],
+            "did": "VU7c9jvBqLee9NkChXU1Kn"
         },{
             "id": "baku",
             "title": "PORT BAKU",
             "latitude": 40.409264,
             "longitude": 49.867092,
-            "destinations": ["baku2", 'aktau']
+            "destinations": ["baku2", 'aktau'],
+            "did": "Ch4eVSWf7KXRubk5to6WFC"
         },{
             "id": "baku2",
             "title": "ADY Container",
             "latitude": 40.4050703,
             "longitude": 48.0619633,
-            "destinations": ["poti", 'baku']
+            "destinations": ["poti", 'baku'],
+            "did": "4vEF4eHwQ1GB5s766rAYAe"
         },{
             "id": "poti",
             "title": "GR Logistics & Terminals",
             "latitude": 42.281373,
             "longitude": 41.618996,
-            "destinations": ["baku2"]
+            "destinations": ["baku2"],
+            "did": "6jzbnVE5S6j15afcpC9yhF"
         }
     ];
 
     var destinationCities = [];
 
     // Default to London view
-    chart.homeGeoPoint = { "longitude": originCities[2].latitude, "latitude": originCities[2].longitude };
+    chart.homeGeoPoint = { "longitude":41.409264, "latitude": 43.867092 };
     chart.homeZoomLevel = 5.5;
 
     var targetSVG = "M9,0C4.029,0,0,4.029,0,9s4.029,9,9,9s9-4.029,9-9S13.971,0,9,0z M9,15.93 c-3.83,0-6.93-3.1-6.93-6.93S5.17,2.07,9,2.07s6.93,3.1,6.93,6.93S12.83,15.93,9,15.93 M12.5,9c0,1.933-1.567,3.5-3.5,3.5S5.5,10.933,5.5,9S7.067,5.5,9,5.5 S12.5,7.067,12.5,9z";
@@ -96,7 +102,7 @@
     //plane.path = planeSVG;
     //plane.fill = am4core.color("#cc0000");
 
-    var title = labelsContainer.createChild(am4core.Label);
+    var title = labelsContainer.createChild(am4core.TextLink);
     title.text = "TMTM";
     title.fill = am4core.color("#cc0000");
     title.fontSize = 30;
@@ -107,6 +113,11 @@
     var changeLink = chart.createChild(am4core.TextLink);
     changeLink.text = "Click to select Logistic Point";
     changeLink.fill = am4core.color("blue");
+
+    title.events.on("hit", function(){
+        console.log(currentOrigin.dataContext.did);
+    });
+
 
     changeLink.events.on("hit", function() {
         if (currentOrigin == originImageSeries.dataItems.getIndex(0)) {
@@ -139,6 +150,9 @@
 
     // Origin series (big targets, London and Vilnius)
     var originImageSeries = chart.series.push(new am4maps.MapImageSeries());
+    originImageSeries.useGeodata = true;
+    originImageSeries.geodata = am4geodata_worldLow;
+    originImageSeries.exclude = ["AQ"];
 
     var originImageTemplate = originImageSeries.mapImages.template;
 
@@ -206,7 +220,7 @@
 
     // Line series
     var lineSeries = chart.series.push(new am4maps.MapLineSeries());
-    lineSeries.mapLines.template.line.strokeOpacity = 0.5;
+    lineSeries.mapLines.template.line.strokeOpacity = 1;
 
     chart.events.on("ready", function() {
         showLines(originImageSeries.dataItems.getIndex(0));
@@ -233,13 +247,14 @@
             }
         }
 
-        title.text = "TMTM Logistic Point " + dataContext.title;
+        title.text = "TMTM Logistic: " + dataContext.title;
 
         chart.zoomToGeoPoint({ latitude: dataContext.zoomLatitude, longitude: dataContext.zoomLongitude }, dataContext.zoomLevel, true);
     }
 
     var graticuleSeries = chart.series.push(new am4maps.GraticuleSeries());
     graticuleSeries.mapLines.template.line.strokeOpacity = 0.05;
+
 
 
     }); // end am4core.ready()
