--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -277,7 +277,7 @@
                 "did": "Ch4eVSWf7KXRubk5to6WFC"
             },{
                 "id": "baku2",
-                "title": "ADY Smart\nAzerbaijan railways",
+                "title": "ADY-Smart\nAzerbaijan railways",
                 "latitude": 40.4050703,
                 "longitude": 48.0619633,
                 "destinations": ["poti", 'baku'],
