--- a/app/templates/transactions.html
+++ b/app/templates/transactions.html
@@ -235,7 +235,7 @@
             <!-- footer -->
             <!-- ============================================================== -->
             <footer class="footer text-center">
-                © 2017 Monster Admin by wrappixel.com
+                © 2020 Networks Synergy by networks-synergy.kz
             </footer>
             <!-- ============================================================== -->
             <!-- End footer -->
