--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.amcharts.com/lib/4/maps.js"></script>
     <script src="https://cdn.amcharts.com/lib/4/geodata/worldHigh.js"></script>
     <script src="https://cdn.amcharts.com/lib/4/themes/animated.js"></script>
+    <script src="/static/assets/plugins/jquery/jquery.min.js"></script>
 </head>
 <body>
     <div id="map" style="height: 100%; height: 800px;">
@@ -16,6 +17,9 @@
     </div>
     <!-- Chart code -->
     <script>
+        /*$(function(){
+            $("#map").height(screen.height);
+        });*/
         am4core.ready(function() {
         // Themes begin
         am4core.useTheme(am4themes_animated);
