refactoring index.html

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -289,7 +289,7 @@
                 "longitude": 48.0619633,
                 "destinations": ["poti", 'baku'],
                 "did": "4vEF4eHwQ1GB5s766rAYAe",
-                "url": "https://ady.socialsirius.com"
+                "url": "https://adi.socialsirius.com"
             },{
                 "id": "poti",
                 "title": "cargo.railways.ge\nPOTI",
