--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -284,7 +284,7 @@
                 "url": "https://pmis.socialsirius.com"
             },{
                 "id": "baku2",
-                "title": "ADY-Smart\nAzerbaijan railways",
+                "title": "ADI Smart\nAzerbaijan railways",
                 "latitude": 40.4050703,
                 "longitude": 48.0619633,
                 "destinations": ["poti", 'baku'],
